--- a/estilo/style.css
+++ b/estilo/style.css
@@ -25,8 +25,7 @@ a {
   }
 
 .section-head {
-
-    font-size: 2.5rem;
+    font-size: 2.5em;
     margin: 0;
 }
 
@@ -40,13 +39,14 @@ a {
 #showcase {
     margin:0px;
     padding: 0px;
-    background: url('../img/showcase.jpeg') no-repeat center/cover;
     width: 100%;
-    height: 100vh;
     position: relative;
-    overflow-y: hidden;
+    overflow-y: auto;
 }
-
+#showcase nav{
+  height: 6vh;
+  background-color: #909090;
+}
 #showcase .container {
     margin-top: 25vh;
 }
@@ -86,8 +86,13 @@ a {
     font-size: 1.2em;
     margin: 0 auto;
     padding: 0 1em;
+    
   }
+#music{
+  background-color: #444;
+}
   .desenvolvedores {
+    
     display: flex;
   }
   .desenvolvedores .bruno {
@@ -186,9 +191,11 @@ a {
   nav a {
     display: inline-block;
     text-align: center;
-    text-decoration: none;
-    padding: 10px 0px 10px 0px;
+    text-decoration: solid;
+    padding: 5px 0px 5px 0px;
     color:white;
+    font-weight: bold;
+    
   }
   nav li:hover {
     background-color: #444;
@@ -217,6 +224,7 @@ a {
     grid-template-columns: repeat(2, 1fr);
     text-align: left;
   }
+
   iframe{
     border: 10px solid white;
     border-radius: 25px;
@@ -227,6 +235,10 @@ width: 40vw;
 border-radius: 20px;
 }
 
+#baixar-jogo{
+  width: 30%;
+  margin-left: 30%;
+}
 footer .container {
 display: flex;
 align-items: center;
