--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,7 +1,271 @@
+
 @import url('https://fonts.googleapis.com/css?family=PT+Sans');
 
-/* CSS Variables */
+@media screen and (max-width: 768px) {
+  /* Estilos para telas menores */
+  
 :root {
+  --light-color: #f4f4f4;
+}
+
+body {
+    font-family: 'PT Sans', sans-serif;
+    background-color: #252529;
+    margin: 0;
+    color: #fff;
+    line-height: 1.6em;
+  }
+
+a {
+    text-decoration: underline;
+    color: green;
+  }
+
+
+/* Section */
+.section {
+    padding: 2rem 0;
+  }
+
+.section-head {
+    font-size: 2.5em;
+    margin: 0;
+}
+
+  /* Showcase */
+#showcase {
+    margin:0px;
+    padding: 0px;
+    width: 100%;
+    position: relative;
+    overflow-y: auto;
+}
+#showcase nav{
+  height: 6vh;
+  background-color: #909090;
+}
+#showcase .container {
+    margin-top: 25vh;
+}
+
+#showcase h1 {
+    font-size: 4rem;
+    margin-bottom: 0;
+}
+
+  /* Footer */
+  footer .footer-cols {
+    display: flex;
+    text-align: left;
+    font-size: 50%;
+    width: 100%;
+  }
+
+  footer .footer-cols ul {
+    list-style: none;
+  }
+
+  footer .footer-cols ul li:first-child {
+    font-size: 1.2rem;
+    padding-bottom: 0.5rem;
+    border-bottom: #444 solid 1px;
+  }
+
+  footer .footer-bottom {
+    background: #333;
+    padding: 1rem;
+  }
+
+/* Utility Classes */
+.container {
+    max-width: 90%;
+    text-align: center;
+    font-size: 1.2em;
+    margin: 0 auto;
+    padding: 0 1em;
+    
+  }
+#music{
+  background-color: #444;
+}
+  .desenvolvedores {
+    display: flex;
+  }
+  .desenvolvedores .bruno {
+    margin: auto;
+  }
+  .desenvolvedores .rafael {
+    margin: auto;
+  }
+  .desenvolvedores img {
+    width: 30vh;
+    border-radius: 5%;
+  }
+
+
+.desenvolvedores img:hover {
+    transform: rotateY(180deg);
+    border-radius: 20px;
+}  
+
+.lead {
+    font-size: 1.3rem;
+}
+
+.text-center {
+    text-align: center;
+  }
+
+
+/* Buttons */
+.btn {
+    padding: 1rem;
+    color: #fff;
+    display: inline-block;
+}
+
+.btn-primary {
+    background: var(--primary-color);
+}
+
+.btn-primary:hover {
+    background: var(--primary-color-hover);
+  }
+
+  .btn-secondary {
+    background: var(--secondary-color);
+  }
+
+  .btn-secondary:hover {
+    background: var(--secondary-color-hover);
+  }
+
+  /* Text colors */
+.text-primary {
+    color: var(--primary-color);
+  }
+
+  .text-secondary {
+    color: var(--secondary-color);
+  }
+
+  .text-light {
+    color: var(--light-color);
+  }
+
+  .bg-light {
+    background: var(--light-color);
+    color: #333;
+  }
+
+.mb {
+    margin-bottom: 1rem;
+  }
+
+  .mt {
+    margin-top: 1rem;
+  }
+
+  /* Navigation */
+  nav {
+    height: 60px;
+    width: 100%;
+    background-color: #333;
+    color: rgb(51, 34, 34);
+    position: fixed;
+  }
+  nav ul {
+    padding: 0px;
+    margin: 0px;
+  }
+  nav li {
+    display: inline-block;
+    float: none;
+    padding: 0px 1vh;
+    margin: 0px;
+  }
+  nav a {
+    display: inline-block;
+    text-align: center;
+    text-decoration: none;
+    padding: 1vw 0px 1vw 0px;
+    color:white;
+    font-weight: bold;
+    font-size: 2vw;
+  }
+  nav li:hover {
+    background-color: #444;
+    border-radius: 5%;
+  }
+    #showcase {
+        height: 600px;
+    }
+
+    #showcase .container {
+        margin-top: 10vh;
+    }
+
+    #showcase h1 {
+        font-size: 10vh;
+      }
+
+      footer .footer-cols {
+      display: flex;
+    }
+  
+
+  .download {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(2, 1fr);
+    text-align: left;
+  }
+
+  iframe{
+    border: 10px solid white;
+    border-radius: 25px;
+  }
+
+.download img {
+width: 40vw;
+border-radius: 20px;
+}
+
+#baixar-jogo{
+  width: 30%;
+  margin-left: 30%;
+}
+footer .container {
+display: flex;
+align-items: center;
+}
+
+.cooperforte {
+ height: 80px;
+ margin-right: 30px;
+ }
+ .cpdi {
+width: 120px;
+height: 80px;
+ }
+
+.footer-cols a {
+  color: var(--light-color);
+  text-decoration: none;
+  
+}
+
+.footer-cols a:hover {
+  color: --;
+  text-decoration: none;
+  
+}
+}
+/*######################################## CSS TELAS MAIORES ########################################### */
+
+@media screen and (min-width: 769px) {
+
+  :root {
   --light-color: #f4f4f4;
 }
 
@@ -263,4 +527,5 @@ height: 80px;
   color: --;
   text-decoration: none;
   
+}
 }
